--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <tr>
             <td>C++</td> <td><a href="Projects.html">★★★★</a></td>
         
-            <td>HTML</td> <td>★★</td>
+            <td>HTML</td> <td>★★☭☭☭</td>
 
             <td>Java</td> <td>★★</td>
         </tr>
